--- a/debian/control
+++ b/debian/control
@@ -3,37 +3,43 @@ Section: devel
 Priority: optional
 Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
 XSBC-Original-Maintainer: Jerome St-Louis <jerome@ecere.com>
-Build-Depends:
- autotools-dev,
- debhelper (>= 7.0.50~),
- gcc-multilib [amd64],
- ia32-libs [amd64],
- lib32ncurses5-dev [amd64],
- lib32z1-dev [amd64],
- libc6-dev-i386 [amd64],
- lib32ffi-dev [amd64],
- libfontconfig1-dev,
- libfreetype6-dev,
- libgif-dev,
- libgl1-mesa-glx,
- libgl1-mesa-dev,
- libjpeg62-dev,
- libncurses5-dev,
- libpng12-dev,
- libsqlite3-dev,
- libx11-dev,
- libxext-dev,
- libxrender-dev,
- linux-libc-dev,
- upx-ucl,
- zlib1g-dev,
- libffi-dev
+Build-Depends: autotools-dev,
+               debhelper (>= 7.0.50~),
+               gcc-multilib [amd64],
+               ia32-libs [amd64],
+               lib32ffi-dev [amd64],
+               lib32ncurses5-dev [amd64],
+               lib32z1-dev [amd64],
+               libc6-dev-i386 [amd64],
+               libffi-dev,
+               libfontconfig1-dev,
+               libfreetype6-dev,
+               libgif-dev,
+               libgl1-mesa-dev,
+               libgl1-mesa-glx,
+               libjpeg62-dev,
+               libncurses5-dev,
+               libpng12-dev,
+               libsqlite3-dev,
+               libx11-dev,
+               libxext-dev,
+               libxrender-dev,
+               linux-libc-dev,
+               upx-ucl,
+               zlib1g-dev
 Standards-Version: 3.9.3
 Homepage: http://www.ecere.com/
 
 Package: ecere-sdk
-Architecture: amd64 i386 armel armhf powerpc
-Depends: ecere-dev, ecere-samples, ecere-extras, libeda0, libedasqlite0, ${devel:Depends}, ${shlibs:Depends}, ${misc:Depends}
+Architecture: amd64 armel armhf i386 powerpc
+Depends: ecere-dev,
+         ecere-extras,
+         ecere-samples,
+         libeda0,
+         libedasqlite0,
+         ${devel:Depends},
+         ${misc:Depends},
+         ${shlibs:Depends}
 Description: Ecere cross-platform SDK
  This package is a metapackage providing
  the entire Ecere cross-platform SDK
@@ -41,8 +47,13 @@ Description: Ecere cross-platform SDK
  libeda0, libedasqlite0).
 
 Package: ecere-dev
-Architecture: amd64 i386 armel armhf powerpc
-Depends: libec0 (= ${binary:Version}), libecerecom0 (= ${binary:Version}), ${devel:Depends}, ${shlibs:Depends}, ${misc:Depends}
+Architecture: amd64 armel armhf i386 powerpc
+Recommends: fonts-freefont-ttf
+Depends: libec0 (= ${binary:Version}),
+         libecerecom0 (= ${binary:Version}),
+         ${devel:Depends},
+         ${misc:Depends},
+         ${shlibs:Depends}
 Description: Ecere SDK Development Tools
  This package provides the compiling tools
  for the eC language, the Ecere IDE,
@@ -51,8 +62,8 @@ Description: Ecere SDK Development Tools
 
 Package: libecere0
 Section: libs
-Architecture: amd64 i386 armel armhf powerpc
-Depends: ${devel:Depends}, ${shlibs:Depends}, ${misc:Depends}
+Architecture: amd64 armel armhf i386 powerpc
+Depends: ${devel:Depends}, ${misc:Depends}, ${shlibs:Depends}
 Description: Ecere Runtime Library
  This package provides the Linux version
  of Ecere's cross-platform runtime library
@@ -63,8 +74,8 @@ Description: Ecere Runtime Library
 
 Package: libecerecom0
 Section: libs
-Architecture: amd64 i386 armel armhf powerpc
-Depends: ${devel:Depends}, ${shlibs:Depends}, ${misc:Depends}
+Architecture: amd64 armel armhf i386 powerpc
+Depends: ${devel:Depends}, ${misc:Depends}, ${shlibs:Depends}
 Description: eC Core Runtime Library
  This package provides the bare minimum
  runtime library for applications
@@ -72,9 +83,12 @@ Description: eC Core Runtime Library
 
 Package: libec0
 Section: libs
-Architecture: amd64 i386 armel armhf powerpc
-Depends: libecere0 (= ${binary:Version}), ${devel:Depends}, ${shlibs:Depends}, ${misc:Depends}
-Description: Ecere Compiler Library
+Architecture: amd64 armel armhf i386 powerpc
+Depends: libecere0 (= ${binary:Version}),
+         ${devel:Depends},
+         ${misc:Depends},
+         ${shlibs:Depends}
+Description: eC Compiler Library
  This package provides the eC compiler.
  It is used by the Ecere IDE, as well
  as the eC compiling tools (ecp, ecc, ecs).
@@ -83,8 +97,8 @@ Description: Ecere Compiler Library
 
 Package: libeda0
 Section: libs
-Architecture: amd64 i386 armel armhf powerpc
-Depends: libecere0, ${devel:Depends}, ${shlibs:Depends}, ${misc:Depends}
+Architecture: amd64 armel armhf i386 powerpc
+Depends: libecere0, ${devel:Depends}, ${misc:Depends}, ${shlibs:Depends}
 Description: Ecere Data Access
  This package provides the Ecere
  Data Access RDBMS abstraction layer.
@@ -94,8 +108,8 @@ Description: Ecere Data Access
 
 Package: libedasqlite0
 Section: libs
-Architecture: amd64 i386 armel armhf powerpc
-Depends: libeda0, ${devel:Depends}, ${shlibs:Depends}, ${misc:Depends}
+Architecture: amd64 armel armhf i386 powerpc
+Depends: libeda0, ${devel:Depends}, ${misc:Depends}, ${shlibs:Depends}
 Description: EDA SQLite Driver
  This package provides SQLite driver
  for building database applications
@@ -103,7 +117,8 @@ Description: EDA SQLite Driver
 
 Package: ecere-samples
 Architecture: all
-Depends: ${devel:Depends}, ${shlibs:Depends}, ${misc:Depends}
+Multi-Arch: allowed
+Depends: ${devel:Depends}, ${misc:Depends}, ${shlibs:Depends}
 Description: Project samples for the Ecere SDK
  This package contains samples for
  multimedia, database, graphics,
@@ -113,7 +128,8 @@ Description: Project samples for the Ecere SDK
 
 Package: ecere-extras
 Architecture: all
-Depends: ${devel:Depends}, ${shlibs:Depends}, ${misc:Depends}
+Multi-Arch: allowed
+Depends: ${devel:Depends}, ${misc:Depends}, ${shlibs:Depends}
 Description: Extras for the Ecere SDK
  This package provides additional Ecere
  functionality, such as SSL Sockets,
