--- a/compiler/bootstrap/ecp/Makefile
+++ b/compiler/bootstrap/ecp/Makefile
@@ -17,6 +17,7 @@ ifndef DEBIAN_PACKAGE
 CFLAGS =
 LDFLAGS =
 endif
+PRJ_CFLAGS =
 CECFLAGS =
 OFLAGS =
 LIBS =
@@ -58,7 +59,7 @@ LIBS += \
 	$(call _L,ecBootstrap)
 endif
 
-CFLAGS += \
+PRJ_CFLAGS += \
 	 $(if $(DEBUG), -g, -O2 -ffast-math) $(FORCE_32_BIT) $(FPIC) -w \
 			 -DECERE_STATIC
 
