--- a/compiler/bootstrap/libec/Makefile
+++ b/compiler/bootstrap/libec/Makefile
@@ -17,6 +17,7 @@ ifndef DEBIAN_PACKAGE
 CFLAGS =
 LDFLAGS =
 endif
+PRJ_CFLAGS =
 CECFLAGS =
 OFLAGS =
 LIBS =
@@ -94,7 +95,7 @@ ifndef STATIC_LIBRARY_TARGET
 LIBS +=
 endif
 
-CFLAGS += \
+PRJ_CFLAGS += \
 	 $(if $(DEBUG), -g, -O2 -ffast-math) $(FORCE_32_BIT) $(FPIC) -w \
 			 -DECERE_STATIC
 ECFLAGS += \
