--- a/debian/control
+++ b/debian/control
@@ -111,7 +111,7 @@ Description: EDA SQLite Driver
 
 Package: ecere-samples
 Architecture: all
-Multi-Arch: allowed
+Multi-Arch: foreign
 Depends: ${devel:Depends}, ${misc:Depends}, ${shlibs:Depends}
 Description: Project samples for the Ecere SDK
  This package contains samples for
@@ -122,7 +122,7 @@ Description: Project samples for the Ecere SDK
 
 Package: ecere-extras
 Architecture: all
-Multi-Arch: allowed
+Multi-Arch: foreign
 Depends: ${devel:Depends}, ${misc:Depends}, ${shlibs:Depends}
 Description: Extras for the Ecere SDK
  This package provides additional Ecere
