--- a/debian/rules
+++ b/debian/rules
@@ -5,6 +5,19 @@ export DEBIAN_PACKAGE=1
 export DPKG_EXPORT_BUILDFLAGS=1
 include /usr/share/dpkg/buildflags.mk
 
+ifndef prefix
+prefix=/usr
+endif
+
+ifeq ($(DEB_HOST_ARCH),amd64)
+export LIBDIR=$(prefix)/lib32
+else
+export LIBDIR=$(prefix)/lib
+endif
+
+export CPPFLAGS
+CPPFLAGS += -DDEB_HOST_MULTIARCH=\"$(LIBDIR)\"
+
 %:
 	dh $@
 
